src/objects/BulkSchedule__c.object
<CustomObject>
    <description>Contains Predefined Schedule dates</description>
    <fields>
        <fullName>ScheduleDate__c</fullName>
        <label>Schedule Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ServiceRequestBulkScheduleCount__c</fullName>
        <description>Shows count of scheduled service requests for that date</description>
        <label>Service RequestCount</label>
        <summaryForeignKey>ServiceRequestBulkSchedule__c.BulkSchedule__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Ward__c</fullName>
        <label>Ward</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>BulkSchedule</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ScheduleDate__c</columns>
        <columns>Ward__c</columns>
        <columns>ServiceRequestBulkScheduleCount__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Last30Days</fullName>
        <columns>NAME</columns>
        <columns>ScheduleDate__c</columns>
        <columns>Ward__c</columns>
        <columns>ServiceRequestBulkScheduleCount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ScheduleDate__c</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <filters>
            <field>ScheduleDate__c</field>
            <operation>lessOrEqual</operation>
            <value>NEXT_N_DAYS:2</value>
        </filters>
        <label>Last 30 Days</label>
    </listViews>
    <listViews>
        <fullName>OUC_DPW_Queue_BulkSchedule</fullName>
        <filterScope>Queue</filterScope>
        <label>OUC DPW Queue</label>
        <queue>OUC_DPW_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>TodayandForward</fullName>
        <columns>NAME</columns>
        <columns>ScheduleDate__c</columns>
        <columns>Ward__c</columns>
        <columns>ServiceRequestBulkScheduleCount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ScheduleDate__c</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <label>Today and Forward</label>
    </listViews>
    <nameField>
        <displayFormat>BS-{000000}</displayFormat>
        <label>BulkSchedule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bulk Schedule</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>